--- a/examples/opc_dhcp/CMakeLists.txt
+++ b/examples/opc_dhcp/CMakeLists.txt
@@ -9,6 +9,11 @@ target_include_directories(pico_lwip INTERFACE
         ${PORT_DIR}/lwip
         )
 
+
+# target_include_directories(w5x00_opc_dhcp PRIVATE 
+#         ${PORT_DIR}/open62541
+#         )
+
 target_link_libraries(${TARGET_NAME} PRIVATE
         pico_stdlib
         hardware_spi
@@ -18,6 +23,7 @@ target_link_libraries(${TARGET_NAME} PRIVATE
         IOLIBRARY_FILES
         LWIP_FILES
         TIMER_FILES
+        OPEN62541_FILES
         )
 
 pico_enable_stdio_usb(${TARGET_NAME} 1)
