lwip_init() has been replaced by lwip_freertos_init(); the server is running successfully and pinging; open62541 settings have been moved to the open62541config.h file. IMPORTANT: lwip_freertos_init() requires adding the line tcpip_init_done(init_sem); after tcpip_init();

--- a/examples/opc_dhcp/CMakeLists.txt
+++ b/examples/opc_dhcp/CMakeLists.txt
@@ -24,6 +24,8 @@ target_link_libraries(${TARGET_NAME} PRIVATE
         LWIP_FILES
         TIMER_FILES
         OPEN62541_FILES
+        pico_lwip_freertos
+        pico_async_context_freertos
         )
 
 pico_enable_stdio_usb(${TARGET_NAME} 1)
