Variable monitoring does not work with stdio_init_all(); added LED glow when the server is loaded;

--- a/port/CMakeLists.txt
+++ b/port/CMakeLists.txt
@@ -81,5 +81,6 @@ target_link_libraries(OPEN62541_FILES PRIVATE
         pico_lwip
         pico_lwip_nosys
         FREERTOS_FILES
+        pico_stdlib
         )
 
