refactor myMalloc.c functions; change Wiznet's pins

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 # CMake minimum required version
 cmake_minimum_required(VERSION 3.12)
+set(CMAKE_BUILD_TYPE Debug)
 
 # Pull in SDK (must be before project)
 if(NOT DEFINED PICO_SDK_PATH)
@@ -20,14 +21,6 @@ set(PROJECT_NAME RP2040-HAT-LWIP-C)
 
 # Set board name
 set(PICO_BOARD pico)
-set(PICO_DEBUG_MALLOC 1)
-
-add_definitions(-DUA_ARCHITECTURE_FREERTOSLWIP)
-#add_definitions(-DOPEN62541_FEERTOS_USE_OWN_MEM)
-
-if (DEFINED UA_ARCHITECTURE_FREERTOSLWIP)
-    message(STATUS "open62541 architecture is UA_ARCHITECTURE_FREERTOSLWIP")
-endif()
 
 # Set project informations
 project(${PROJECT_NAME} C CXX ASM)
@@ -77,6 +70,12 @@ if(NOT DEFINED OPEN62541_DIR)
     message(STATUS "OPEN62541_DIR = ${OPEN62541_DIR}")
 endif()
 
+add_definitions(-DUA_ARCHITECTURE_FREERTOSLWIP)
+#add_definitions(-DOPEN62541_FEERTOS_USE_OWN_MEM)
+if (DEFINED UA_ARCHITECTURE_FREERTOSLWIP)
+    message(STATUS "open62541 architecture is UA_ARCHITECTURE_FREERTOSLWIP")
+endif()
+
 # Turn off mbedtls test mode 
 set(ENABLE_PROGRAMS OFF CACHE BOOL "Build mbedtls programs")
 set(ENABLE_TESTING OFF CACHE BOOL "Build mbedtls testing")
@@ -89,7 +88,7 @@ add_subdirectory(examples)
 # Add libraries in subdirectories
 add_subdirectory(${CMAKE_SOURCE_DIR}/libraries)
 #add_subdirectory(${FREERTOS_DIR})
-add_subdirectory(${MBEDTLS_DIR})
+#add_subdirectory(${MBEDTLS_DIR})
 add_subdirectory(${PORT_DIR})
 
 # Set compile options
